@@ -2,6 +2,8 @@
 
  	* tests/bre.tests: Enable a regression test for bug #9519.
  	* src/grep.c: Fix a seg-fault in "-o -i": patch #1939.
+ 	* tests/grep-o.sh: New tests for "-o", initially all failing.
+	* tests/Makefile.am: Include the new tests file 'grep-o.sh'.
 
 2005-04-11  Julian Foad  <julianfoad@btopenworld.com>
 
